Updated some issues

--- a/melting_point.ipynb
+++ b/melting_point.ipynb
@@ -3305,8 +3305,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "7429a2d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final = pd.read_csv('sample_submission.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e423c1c7",
+   "metadata": {},
+   "source": [
+    "Finalized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a60c635a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3314,10 +3332,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48b45623",
+   "id": "d3582161",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "48b45623",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pred' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m final[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTm\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pred\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pred' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "final['Tm'] = pred"
+   ]
   },
   {
    "cell_type": "code",
@@ -3325,7 +3365,34 @@
    "id": "7f857158",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final.to_csv('submission.csv')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1a32a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjoblib\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m joblib\u001b[38;5;241m.\u001b[39mdump(rf, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrf_model.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m joblib\u001b[38;5;241m.\u001b[39mdump(scaler, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscaler.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(rf, 'rf_model.pkl')\n",
+    "joblib.dump(scaler, 'scaler.pkl')\n"
+   ]
   }
  ],
  "metadata": {
@@ -3344,7 +3411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
